fix(intro section): fixed attribution alignment

--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -85,6 +85,7 @@
         .attribution {
             grid-row: 11;
             text-align: end;
+            align-self: flex-end;
         }
     }
     .section.experiment {
