--- a/src/_tablet.scss
+++ b/src/_tablet.scss
@@ -75,6 +75,7 @@
             }
             .attribution {
                 grid-row: 13;
+                align-self: flex-start;
             }
         }
         .section.experiment {
